; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/nes/extr_nes_mgt.c_nes_destroy_pau_qp.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/nes/extr_nes_mgt.c_nes_destroy_pau_qp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nes_device = type { i32 }
%struct.nes_qp = type { i32, i32, i32 }
%struct.sk_buff = type { i32 }

@pau_qps_destroyed = common dso_local global i32 0, align 4
@PCI_DMA_TODEVICE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nes_destroy_pau_qp(%struct.nes_device* %0, %struct.nes_qp* %1) #0 {
  %3 = alloca %struct.nes_device*, align 8
  %4 = alloca %struct.nes_qp*, align 8
  %5 = alloca %struct.sk_buff*, align 8
  %6 = alloca i64, align 8
  store %struct.nes_device* %0, %struct.nes_device** %3, align 8
  store %struct.nes_qp* %1, %struct.nes_qp** %4, align 8
  %7 = call i32 @atomic_inc(i32* @pau_qps_destroyed)
  %8 = load %struct.nes_qp*, %struct.nes_qp** %4, align 8
  %9 = getelementptr inbounds %struct.nes_qp, %struct.nes_qp* %8, i32 0, i32 0
  %10 = load i64, i64* %6, align 8
  %11 = call i32 @spin_lock_irqsave(i32* %9, i64 %10)
  br label %12

12:                                               ; preds = %17, %2
  %13 = load %struct.nes_qp*, %struct.nes_qp** %4, align 8
  %14 = getelementptr inbounds %struct.nes_qp, %struct.nes_qp* %13, i32 0, i32 2
  %15 = call i64 @skb_queue_len(i32* %14)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %29

17:                                               ; preds = %12
  %18 = load %struct.nes_qp*, %struct.nes_qp** %4, align 8
  %19 = getelementptr inbounds %struct.nes_qp, %struct.nes_qp* %18, i32 0, i32 2
  %20 = call %struct.sk_buff* @skb_dequeue(i32* %19)
  store %struct.sk_buff* %20, %struct.sk_buff** %5, align 8
  %21 = load %struct.nes_device*, %struct.nes_device** %3, align 8
  %22 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %23 = load i32, i32* @PCI_DMA_TODEVICE, align 4
  %24 = call i32 @nes_mgt_free_skb(%struct.nes_device* %21, %struct.sk_buff* %22, i32 %23)
  %25 = load %struct.nes_qp*, %struct.nes_qp** %4, align 8
  %26 = getelementptr inbounds %struct.nes_qp, %struct.nes_qp* %25, i32 0, i32 1
  %27 = load i32, i32* %26, align 4
  %28 = call i32 @nes_rem_ref_cm_node(i32 %27)
  br label %12

29:                                               ; preds = %12
  %30 = load %struct.nes_qp*, %struct.nes_qp** %4, align 8
  %31 = getelementptr inbounds %struct.nes_qp, %struct.nes_qp* %30, i32 0, i32 0
  %32 = load i64, i64* %6, align 8
  %33 = call i32 @spin_unlock_irqrestore(i32* %31, i64 %32)
  ret void
}

declare dso_local i32 @atomic_inc(i32*) #1

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i64 @skb_queue_len(i32*) #1

declare dso_local %struct.sk_buff* @skb_dequeue(i32*) #1

declare dso_local i32 @nes_mgt_free_skb(%struct.nes_device*, %struct.sk_buff*, i32) #1

declare dso_local i32 @nes_rem_ref_cm_node(i32) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
